<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.menu.ItemListFragment">

    <ImageView
        android:id="@+id/header_image"
        android:src="@drawable/kotlin_logo"
        android:contentDescription="@string/desc_album"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvShowName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvShowName"
        android:text="@string/name"
        android:textSize="40sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/header_image"
        app:layout_constraintBottom_toTopOf="@id/tvShowArtist"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvShowArtist"
        android:text="@string/artists"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvShowName"
        app:layout_constraintBottom_toTopOf="@id/tvShowYear"
        />

    <TextView
        android:id="@+id/tvShowYear"
        android:text="@string/year"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvShowArtist"
        app:layout_constraintBottom_toTopOf="@id/tvShowLabel"
        />

    <TextView
        android:id="@+id/tvShowLabel"
        android:text="@string/display_label"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvShowYear"
        app:layout_constraintBottom_toTopOf="@id/tvShowTracks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvShowTracks"
        android:text="@string/display_track"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvShowLabel"
        app:layout_constraintBottom_toTopOf="@id/tvShowGenre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvShowGenre"
        android:text="@string/display_genre"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintTop_toBottomOf="@id/tvShowTracks"
        app:layout_constraintBottom_toTopOf="@+id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnBack"
        android:text="@string/go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvShowGenre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
