<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentCredit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreditFragment">

    <TextView
        android:id="@+id/tvEmailTitle"
        android:text="@string/send_email_message"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvEmailSubject"
        android:text="@string/email_subject"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmailTitle"
        app:layout_constraintBottom_toTopOf="@+id/tvContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etEmailSubject"
        />

    <EditText
        android:id="@+id/etEmailSubject"
        android:inputType="textEmailSubject"
        android:textSize="14sp"
        android:hint="@string/email_subject_default"
        android:autofillHints=""
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailTitle"
        app:layout_constraintBottom_toTopOf="@+id/etContent"
        app:layout_constraintStart_toEndOf="@+id/tvEmailSubject"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvContent"
        android:text="@string/email_body"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailSubject"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etContent"
        />

    <EditText
        android:id="@+id/etContent"
        android:inputType="text"
        android:textSize="14sp"
        android:hint="@string/album_placeholder"
        android:autofillHints=""
        android:layout_width="230dp"
        android:layout_height="300dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintTop_toBottomOf="@+id/etEmailSubject"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvContent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnSendEmail"
        android:text="@string/send_email_button"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="@+id/etContent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnEmailReturn"
        />

    <Button
        android:id="@+id/btnEmailReturn"
        android:text="@string/go_back_menu"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="@+id/etContent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnSendEmail"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>